Add authorize model
