# app/idp/docs/swagger.json
@@ -112,7 +112,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Authenticate"
+                            "$ref": "#/definitions/model.Authorize"
                         }
                     },
                     "500": {
@@ -156,7 +156,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Authenticate"
+                            "$ref": "#/definitions/model.Authorize"
                         }
                     },
                     "500": {
@@ -172,6 +172,59 @@
     "definitions": {
         "model.Authenticate": {
             "type": "object"
+        },
+        "model.Authorize": {
+            "type": "object",
+            "required": [
+                "clientID",
+                "display",
+                "maxAge",
+                "nonce",
+                "prompt",
+                "redirectURI",
+                "responseMode",
+                "responseType",
+                "scope",
+                "state"
+            ],
+            "properties": {
+                "clientID": {
+                    "type": "string"
+                },
+                "display": {
+                    "type": "string"
+                },
+                "idTokenHint": {
+                    "type": "string"
+                },
+                "maxAge": {
+                    "type": "integer"
+                },
+                "nonce": {
+                    "type": "string"
+                },
+                "prompt": {
+                    "type": "string"
+                },
+                "redirectURI": {
+                    "type": "string"
+                },
+                "responseMode": {
+                    "type": "string"
+                },
+                "responseType": {
+                    "type": "string"
+                },
+                "scope": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "uiLocales": {
+                    "type": "string"
+                }
+            }
         },
         "model.BadRequest": {
             "type": "object"
